syntax = "proto2";

package mws.rng;

message DumpKV {
  repeated KV kv = 1;
}

message KV {
  required bytes k = 1;
  required bytes v = 2;
}

message ValueKey {
  required bytes v = 1;
  required bytes nextKey = 2;
}
