syntax = "proto3";

package mws.rng;

import "data.proto";
import "msg_dump.proto";
import "msg_repl.proto";

message Msg {
  oneof msg_type {
    DumpBucketData dumpBucketData = 2;
    DumpEn dumpEn = 3;
    DumpGet dumpGet = 4;
    DumpGetBucketData dumpGetBucketData = 5;
    DumpPut dumpPut = 6;
    ReplBucketPut replBucketPut = 7;
    ReplBucketUpToDate replBucketUpToDate = 8;
    ReplGetBucketIfNew replGetBucketIfNew = 9;
    ReplNewerBucketData replNewerBucketData = 10;
    StoreDelete storeDelete = 11;
    StoreGet storeGet = 12;
    StoreGetAck storeGetAck = 13;
    StorePut storePut = 14;
  }
}

message StoreGet {
  bytes key = 1;
}

message StorePut {
  Data data = 1;
}

message StoreDelete {
  bytes key = 1;
}

message StoreGetAck {
  repeated Data d = 1;
}

message StorePutStatus {
  oneof sealed_value {
    StorePutSaved saved = 1;
    StorePutConflict conflict = 2;
  }
}

message StorePutSaved {
}

message StorePutConflict {
  repeated Data broken = 1;
}

message QuorumState {
  oneof sealed_value {
    QuorumStateUnsatisfied quorumStateUnsatisfied = 1;
    QuorumStateReadonly quorumStateReadonly = 2;
    QuorumStateEffective quorumStateEffective = 3;
  }
}

message QuorumStateUnsatisfied {
}

message QuorumStateReadonly {
}

message QuorumStateEffective {
}

message ChangeState {
  QuorumState s = 1;
}
